--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,5 +4,5 @@ jobs:
   greeting:
     runs-on: ubuntu-latest
     steps:
-      name: Greeting!
-      run: echo hello world
+      - name: Greeting!
+        run: echo hello world
