Adds runs-on to matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         runs-on: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - python-version: "3.12"
+            runs-on: ubuntu-latest
             allow_failure: true
 
     steps:
